[package]
name = "libkrb5-sys"
description = "[UNMAINTAINED] FFI bindings for MIT Kerberos 5 (libkrb5)"
license = "MIT OR Apache-2.0"

version = "0.0.3"
edition = "2021"

authors = ["Fabio Valentini <decathorpe@gmail.com>"]
readme = "README.md"
categories = ["external-ffi-bindings"]
keywords = ["krb5", "kerberos"]
repository = "https://github.com/ironthree/libkrb5-rs"

links = "krb5"

[dependencies]

[build-dependencies]
bindgen = "0.59.1"
pkg-config = "0.3.17"

[badges]
maintenance = { status = "deprecated" }

