[package]
name = "libkrb5"
description = "[UNMAINTAINED] Rust bindings for MIT Kerberos 5"
license = "MIT OR Apache-2.0"

version = "0.0.3"
edition = "2021"

authors = ["Fabio Valentini <decathorpe@gmail.com>"]
readme = "README.md"
categories = ["api-bindings"]
keywords = ["krb5", "kerberos"]
repository = "https://github.com/ironthree/libkrb5-rs"

[dependencies]
lazy_static = "1.4.0"
libkrb5-sys = { path = "../libkrb5-sys", version = "0.0.3" }

[badges]
maintenance = { status = "deprecated" }

